[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Fibberish/Fibberish.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Screens/GameOver.gd" type="Script" id=2]
[ext_resource path="res://assets/UIThemes/Menus.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 182
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 85
font_data = ExtResource( 1 )

[node name="GameOver" type="Node2D"]
modulate = Color( 0.75, 0.75, 0.75, 1 )
light_mask = 16
position = Vector2( -464, -411 )
script = ExtResource( 2 )

[node name="Instructions" type="RichTextLabel" parent="."]
margin_left = 43.0
margin_top = 54.0
margin_right = 928.0
margin_bottom = 227.0
rect_pivot_offset = Vector2( 160, -44 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Game Over!"
text = "Game Over!"

[node name="MenuButton" type="Button" parent="."]
margin_left = 261.0
margin_top = 460.0
margin_right = 654.0
margin_bottom = 568.0
focus_neighbour_top = NodePath("../RestartButton")
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "Menu"

[node name="RestartButton" type="Button" parent="."]
margin_left = 264.0
margin_top = 272.0
margin_right = 657.0
margin_bottom = 380.0
focus_neighbour_bottom = NodePath("../MenuButton")
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "Restart"

[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
